// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Picker Styles image-navigator DragZone is dropping file 1`] = `
.c0 {
  width: 200px;
  height: 200px;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -ms-flex-direction: column;
  -webkit-flex-direction: column;
  align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  justify-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  padding: 15px;
  position: relative;
  border-radius: 100%;
  transition: background-color 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
  -webkit-transition: background-color 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
  background-color: #ddecfe;
}

.c0:after {
  content: '';
  border: 2px dashed #d0d6d0;
  border-radius: 100%;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: border-color 0.3s cubic-bezier(0.19, 1, 0.22, 1);
  -webkit-transition: border-color 0.3s cubic-bezier(0.19, 1, 0.22, 1);
}

.c0:after {
  border-color: #0e56c4;
  animation: iVXCSc 8s linear infinite;
  -webkit-animation: iVXCSc 8s linear infinite;
}

<div
  className="c0"
/>
`;

exports[`Avatar Picker Styles image-navigator DragZone is not dropping file 1`] = `
.c0 {
  width: 200px;
  height: 200px;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -ms-flex-direction: column;
  -webkit-flex-direction: column;
  align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  justify-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  padding: 15px;
  position: relative;
  border-radius: 100%;
  transition: background-color 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
  -webkit-transition: background-color 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.c0:after {
  content: '';
  border: 2px dashed #d0d6d0;
  border-radius: 100%;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: border-color 0.3s cubic-bezier(0.19, 1, 0.22, 1);
  -webkit-transition: border-color 0.3s cubic-bezier(0.19, 1, 0.22, 1);
}

<div
  className="c0"
/>
`;
